--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ body{
   background-color: #0062d1;
   width: 100%;
   height: 3vw;
+  position: sticky;
 }
 
 .flex-container-footer {
@@ -277,10 +278,12 @@ width: 80%;
   background-color: white;
   width: 80%;
   float: left;
-  padding: 1vw;
+  padding: .3vw;
   height: 7.5vw;
   box-shadow: .2vw .3vw .5vw 0vw   gray;
-margin-bottom: 3vw;
+  margin-bottom: 3vw;
+  font-size: 1vw;
+  color: black;
 }
 /*#workSoundTech{
   background-image: linear-gradient(to right,#003572,white);
@@ -652,7 +655,7 @@ float: left;
   float: right;
   background-color: white;
   margin-top: 1vw;
-  padding-bottom: 3vw;
+
   border-radius: 1vw;
   border-style: solid;
   border-color: orangered;
@@ -667,6 +670,10 @@ float: left;
 
 #contentProjects{
  /* overflow: scroll; */
+}
+.projectsConOuter{
+  overflow: auto;
+  height: 40vw;
 }
 .projectsCon{
 width: 50%;
@@ -776,7 +783,7 @@ float: left;
   text-align: left;
 }
 .column, .mediaLinks{
-font-size: 2.2vw;
+font-size: 2vw;
 }
 .flex-container-content{
   width: 100%;
@@ -847,7 +854,8 @@ overflow: unset;
   width: 100%;
 }
 .skillItemsText{
-  padding-bottom: 10vw;
+  padding-bottom: 0vw;
+
 }
 .skillsItemCircle{
   width: 10vw;
@@ -900,18 +908,15 @@ height: 40vw;
   font-size: 3vw;
 }  
 
-.workContainer{
-  height: 18vw;
-  display: block;
-}
 .workText{
   padding: 0;
-  margin-bottom: 0;
+  margin-bottom: 2vw;
   display: block;
-  width: 75%;
-  height: 80%;
+  width: 100%;
+  height: fit-content;
   font-size: 2.5vw;
   padding: 1vw;
+  text-align: justify;
 
 }
 .workHead{
@@ -923,10 +928,12 @@ height: 40vw;
 
 }
 .workPicContainer{
-  width: 20vw;
-  height: 18vw;
+  width: 50%;
   display: block;
   fill: crimson;
+  border-radius: unset;
+  margin: auto;
+  float: none;
 }
 @keyframes headAni{
   from {width:40%;}
@@ -934,7 +941,7 @@ height: 40vw;
 }
 
 .textHead{
-width: 75%;
+width: 100%;
 font-size: 2.5vw;
 }
 .text{
